      administrator to have the CUDA_VISIBLE_DEVICES environment variable set
      or not set.
  b - TRQ-2947. Fix a race condition on deleting jobs which are failing to start.
  b - TRQ-2332. Fix a job dependency problem when the failover server comes up. This
      only affects users running high availability. (backported from 5.1.1)
 

4.2.9
  f - A new qmgr option: set server copy_on_rerun=[True|False] is available.
      When set to True, Torque will copy the OU, ER files over to the user-specified
      directory when the qrerun command is executed (i.e a job preemption).
      This setting requires a pbs_server restart for the new value to take in effect.
      Note that the MOMs and the pbs_server must be updated to this version before
      setting copy_on_rerun=True will behave as expected.
  f - A new qmgr option: job_exclusive_on_use=[True|False] is available. When set
      to True, pbsnodes will report job-exclusive anytime 1 or more processors are
      in use. This resolves discrepancies between Moab and TORQUE node reports in
      cases where Moab is configured with a SINGLEJOB policy. 
  e - Improved performance by moving scan_for_terminated to its own thread.
  e - Two new fields were added to the accounting file for completed jobs:
      total_execution_slots and unique_node_count. total_execution_slots should be 20
      for a job that requests nodes=2:ppn=10. unique_node_count should be the number
      of unique hosts the job occupied.
  b - TRQ-2410. Improved qstat behavior in cases where bad job IDs were referenced
      in the command.
  b - TRQ-2632. pbsdsh required FQDN even if other elements didn't. pbsdsh no longer
      requires FQDN.
  b - TRQ-2692. Corrected mismatched <Job_Id> XML tags in the job log.
  b - TRQ-2367. Fixed bug related to some jobs missing accounting records on large systems.
  b - TRQ-2732. Fixed bug where OU files were being left in spool when job was
      preempted or requeued.